[package]
name = "g3rcgen"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "4.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
rmpv = "1.0"
memchr = "2"
rcgen = { version = "0.10", features = ["pem", "x509-parser"] }
tokio = { version = "1.21", features = ["macros", "net", "io-util"] }
flume = { version = "0.10", default-features = false, features = ["async"] }
g3-types = { path = "../lib/g3-types" }
g3-runtime = { path = "../lib/g3-runtime" }
g3-msgpack = { path = "../lib/g3-msgpack" }
g3-daemon = { path = "../lib/g3-daemon" }

[build-dependencies]
rustc_version = "0.4"
