[package]
name = "g3tiles"
version = "0.2.7"
license.workspace = true
edition.workspace = true
rust-version = "1.70.0"
description = "G3 generic reverse proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
yaml-rust.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_info"] }
once_cell.workspace = true
rand.workspace = true
clap.workspace = true
clap_complete.workspace = true
indexmap.workspace = true
arc-swap.workspace = true
ahash.workspace = true
itoa.workspace = true
ascii.workspace = true
slog = { workspace = true, features = ["nested-values", "max_level_trace", "release_max_level_info"] }
capnp.workspace = true
capnp-rpc.workspace = true
tokio = { workspace = true, features = ["net", "sync", "time"] }
openssl.workspace = true
openssl-probe = { workspace = true, optional = true }
rustls.workspace = true
tokio-rustls.workspace = true
governor = { workspace = true, features = ["std", "jitter"] }
chrono = { workspace = true, features = ["clock"] }
uuid.workspace = true
g3-compat.workspace = true
g3-daemon.workspace = true
g3-signal.workspace = true
g3-yaml = { workspace = true, features = ["acl-rule", "route", "openssl", "rustls"] }
g3-types = { workspace = true, features = ["acl-rule", "route", "openssl", "rustls"] }
g3-socket.workspace = true
g3-io-ext.workspace = true
g3-openssl.workspace = true
g3-statsd-client.workspace = true
g3-slog-types.workspace = true
g3tiles-proto = { path = "proto" }

[build-dependencies]
rustc_version.workspace = true

[features]
default = []
vendored-openssl = ["openssl/vendored", "openssl-probe"]
vendored-tongsuo = ["openssl/tongsuo", "openssl-probe", "g3-yaml/tongsuo", "g3-types/tongsuo"]
vendored-aws-lc = ["openssl/aws-lc", "openssl-probe"]
