[package]
name = "test-int-signal"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
g3-signal.workspace = true
