[package]
name = "test-resolver"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt"] }
log = { workspace = true, features = ["max_level_trace", "release_max_level_info"] }
slog = { workspace = true, features = ["max_level_trace", "release_max_level_info"] }
slog-scope = "4"
slog-stdlog = "4"
g3-types = { workspace = true, features = ["async-log"] }
g3-resolver = { workspace = true, features = ["trust-dns"] }
g3-stdlog.workspace = true
