[package]
name = "test-tcp-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }
futures-util = "0.3"
once_cell = "1.7"
g3-io-ext = { path = "../../lib/g3-io-ext" }
