[package]
name = "test-tcp-relay"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
futures-util.workspace = true
once_cell.workspace = true
g3-io-ext = { path = "../../lib/g3-io-ext" }
