[package]
name = "g3-codec"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
smallvec = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
g3-std-ext.workspace = true
g3-types = { workspace = true }

[features]
default = []
ber = []
ldap = ["ber"]
leb128 = []
thrift = ["leb128"]
tls = []
quic = ["tls", "dep:openssl", "dep:smallvec"]

[dev-dependencies]
hex-literal.workspace = true
