[package]
name = "g3-compat"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
libc.workspace = true
rustix = { workspace = true, features = ["system"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_SystemInformation"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true
mach2.workspace = true
