[package]
name = "g3-ctl"
version = "0.2.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-util = { workspace = true, features = ["compat"] }
