[package]
name = "g3-daemon"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
slog = { workspace = true, features = ["max_level_trace", "release_max_level_info"] }
slog-scope = "4"
slog-stdlog = "4.1"
daemonize = "0.5"
futures-util.workspace = true
yaml-rust.workspace = true
petgraph = "0.6"
once_cell.workspace = true
cadence.workspace = true
ahash.workspace = true
itoa.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-util = { workspace = true, features = ["compat"] }
chrono = { workspace = true, features = ["clock"] }
uuid = { workspace = true, features = ["v1", "v4"] }
g3-types = { workspace = true, features = ["async-log"] }
g3-stdlog.workspace = true
g3-journal.workspace = true
g3-syslog.workspace = true
g3-fluentd.workspace = true
g3-runtime.workspace = true
g3-yaml = { workspace = true, features = ["syslog", "fluentd", "statsd", "sched"] }
g3-statsd.workspace = true
g3-io-ext.workspace = true
