[package]
name = "g3-dpi"
version = "0.2.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
fnv.workspace = true
memchr.workspace = true
fixedbitset.workspace = true
smallvec = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
g3-types = { workspace = true, features = ["http", "acl-rule"] }

[dev-dependencies]
hex-literal.workspace = true

[features]
default = []
quic = ["dep:openssl", "dep:smallvec"]
