[package]
name = "g3-dpi"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv.workspace = true
memchr.workspace = true
fixedbitset.workspace = true
g3-codec = { workspace = true, features = ["ldap", "tls", "quic"] }
g3-types = { workspace = true, features = ["http", "acl-rule"] }

[features]
default = []
quic = []
