[package]
name = "g3-encoding"
version = "0.2.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
atoi.workspace = true
g3-io-ext = { path = "../g3-io-ext" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
tokio-stream = "0.1"
bytes.workspace = true
