[package]
name = "g3-fluentd"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
slog = { workspace = true, features = ["nested-values"] }
chrono = { workspace = true, features = ["clock"] }
rustix = { workspace = true, features = ["system"] }
flume = { workspace = true, features = ["async"] }
rmp.workspace = true
rmp-serde.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt", "net", "time", "macros"] }
tokio-rustls.workspace = true
rand.workspace = true
digest.workspace = true
sha2.workspace = true
hex.workspace = true
log.workspace = true
g3-types = { workspace = true, features = ["async-log", "rustls"] }
g3-socket.workspace = true
