[package]
name = "g3-fluentd"
version = "0.2.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
slog.workspace = true
chrono = { workspace = true, features = ["clock"] }
flume = { workspace = true, features = ["async"] }
rmp.workspace = true
rmp-serde.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt", "net", "time", "macros", "io-util"] }
openssl.workspace = true
constant_time_eq.workspace = true
hex.workspace = true
log.workspace = true
yaml-rust = { workspace = true, optional = true }
g3-compat.workspace = true
g3-socket.workspace = true
g3-openssl.workspace = true
g3-types = { workspace = true, features = ["async-log", "openssl"] }
g3-yaml = { workspace = true, optional = true, features = ["openssl"] }

[features]
default = []
yaml = ["dep:g3-yaml", "dep:yaml-rust"]
