[package]
name = "g3-ftp-client"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "io-util"] }
async-trait.workspace = true
memchr.workspace = true
chrono.workspace = true
mime.workspace = true
log.workspace = true
g3-types.workspace = true
g3-io-ext.workspace = true
g3-datetime.workspace = true

[features]
default = []
log-raw-io = []
