[package]
name = "g3-geoip-db"
version = "0.3.0"
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
ip_network.workspace = true
ip_network_table.workspace = true
csv = "1.2"
flate2 = "1.0"
zip = { version = "2.3", default-features = false, features = ["deflate"] }
g3-geoip-types.workspace = true
