[package]
name = "g3-geoip"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
once_cell.workspace = true
ip_network.workspace = true
ip_network_table.workspace = true
csv = "1.2"
