[package]
name = "g3-h2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bytes = "1.0"
h2 = "0.3"
http = "0.2"
tokio = { version = "1.0" }
g3-http = { path = "../g3-http" }
g3-io-ext = { path = "../g3-io-ext" }
