[package]
name = "g3-hickory-client"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-client.workspace = true
hickory-proto = { workspace  = true, features = ["tokio-runtime", "quinn"] }
futures-util.workspace = true
http.workspace = true
h2.workspace = true
h3.workspace = true
h3-quinn.workspace = true
bytes.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
quinn = { workspace = true, features = ["runtime-tokio", "tls-rustls"] }

[features]
default = []
