[package]
name = "g3-hickory-client"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-client.workspace = true
hickory-proto = { workspace  = true, features = ["tokio-runtime"] }
futures-util.workspace = true
http.workspace = true
h2.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "time"] }
rustls.workspace = true
tokio-rustls.workspace = true
quinn = { workspace = true, optional = true, features = ["runtime-tokio", "tls-rustls"] }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }

[features]
default = []
quic = ["dep:quinn", "dep:h3", "dep:h3-quinn"]
