[package]
name = "g3-hickory-client"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-proto = { workspace  = true, features = ["tokio-runtime"] }
futures-util.workspace = true
http.workspace = true
h2.workspace = true
bytes.workspace = true
fastrand.workspace = true
tokio = { workspace = true, features = ["net", "time"] }
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
quinn = { workspace = true, optional = true, features = ["rustls"] }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
g3-socket.workspace = true

[features]
default = []
quic = ["dep:quinn", "dep:h3", "dep:h3-quinn"]
