[package]
name = "g3-histogram"
version = "0.2.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
hdrhistogram.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
zmij.workspace = true
portable-atomic = { workspace = true, features = ["float"] }
