[package]
name = "g3-http"
version = "0.2.0"
license.workspace = true
edition.workspace = true
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
bytes.workspace = true
ahash.workspace = true
tokio.workspace = true
memchr.workspace = true
atoi.workspace = true
http.workspace = true
mime.workspace = true
base64.workspace = true
g3-types = { workspace = true, features = ["http"] }
g3-io-ext.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "io-util", "rt"] }
tokio-util = { workspace = true, features = ["io"] }
tokio-stream.workspace = true
httparse = "1.4"
