[package]
name = "g3-http"
version = "0.5.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
bytes.workspace = true
tokio.workspace = true
memchr.workspace = true
atoi.workspace = true
http.workspace = true
mime.workspace = true
base64.workspace = true
percent-encoding.workspace = true
smol_str.workspace = true
g3-types = { workspace = true, features = ["http"] }
g3-io-ext.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "io-util", "rt"] }
tokio-test.workspace = true
