[package]
name = "g3-icap-client"
version = "0.2.0"
license.workspace = true
edition.workspace = true
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
memchr.workspace = true
atoi.workspace = true
url.workspace = true
bytes.workspace = true
base64.workspace = true
flume = { workspace = true, features = ["async"] }
tokio = { workspace = true, features = ["time", "io-util", "sync"] }
http.workspace = true
h2.workspace = true
g3-types.workspace = true
g3-io-ext.workspace = true
g3-socket.workspace = true
g3-http.workspace = true
g3-h2.workspace = true
